--- a/front/src/assets/styles/default.scss
+++ b/front/src/assets/styles/default.scss
@@ -1,61 +1,70 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 :root {
-    --black: #000000;
-    --white: #ffffff;
-    --background: #151515;
-    --header: #212121;
-    --header-border: #2a2a2a;
-    --3-color: #D5F1D9;
-    --4-color: #3EBBB5;
-    --5-color: #e7d9b4;
+  --black: #000000;
+  --white: #ffffff;
+  --background: #151515;
+  --1-color: #212121;
+  --2-color: rgba(65, 64, 64, 1);
+  --2-color120: rgb(75, 75, 75);
+  --2-color50: rgba(64, 64, 64, 0.5);
+  --2-color20: rgba(64, 64, 64, 0.2);
+  --3-color: rgba(191, 191, 191, 1);
+  --3-color50: rgba(191, 191, 191, 0.5);
 }
 
-html {
-    -ms-overflow-style: none; /* Для Internet Explorer и Edge */
-    scrollbar-width: none; /* Для Firefox */
-    height: 100%;
-    width: 100%;
-    display: flex;
-    background-color: var(--background);
-    justify-content: center; /* Горизонтальное центрирование */
+html, body, #app {
+  display: flex;
+  justify-content: center; /* Горизонтальное центрирование */
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: var(--background);
+  font-family: Calibri, sans-serif;
+  font-size: 14px;
+  cursor: default;
+  color: var(--3-color);
+  scrollbar-width: none; /* Для Firefox */
+  -ms-overflow-style: none; /* Для Internet Explorer и Edge */
 }
 
-body {
-    width: 100%;
-    height: 100%;
-    max-width: 1200px;
-    margin: 0;
-    padding: 0;
+input {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  border: none;
+  background-color: var(--2-color20);
+  border-radius: 6px;
+  color: var(--3-color);
 }
 
-p {
-    text-indent: 5%;
-    text-align: justify;
+input:focus {
+  outline: none;
 }
 
-header {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top:0;
-    padding: 30px;
-    border-bottom: 1px solid var(--header-border);
-    background: var(--header);
-    text-align: center;
+.btn {
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  background-color: var(--2-color);
+  color: var(--3-color);
+  border-radius: 6px;
 }
 
-main {
-    flex: 1;
-    padding: 5%;
-    font-size: clamp(12px, 5vw, 30px);
+.btn:hover {
+  background-color: var(--2-color120);
 }
 
-img {
-    width: 100%;
+.h-100 {
+  height: 100%;
 }
 
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* 100% от высоты видимого окна браузера */
+.w-100 {
+  width: 100%;
 }
