--- a/front/src/assets/styles/default.scss
+++ b/front/src/assets/styles/default.scss
@@ -68,3 +68,69 @@ input:focus {
 .w-100 {
   width: 100%;
 }
+
+.window {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  border-radius: 12px;
+  background-color: var(--1-color);
+  border: 1px solid var(--2-color50);
+}
+
+.window .header {
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  align-items: center;
+  border-top-left-radius: 11px;
+  border-top-right-radius: 11px;
+  background-color: var(--2-color);
+}
+
+.window .main {
+  display: flex;
+  padding: 10px;
+  min-height: 30px;
+}
+
+.p-2 {
+  padding: 20px;
+}
+
+.pr-2 {
+  padding-right: 20px;
+}
+
+.pl-2 {
+  padding-left: 20px;
+}
+
+.pb-2 {
+  padding-bottom: 20px;
+}
+
+.pt-2 {
+  padding-top: 20px;
+}
+
+
+.m-2 {
+  margin: 20px;
+}
+
+.mr-2 {
+  margin-right: 20px;
+}
+
+.ml-2 {
+  margin-left: 20px;
+}
+
+.mb-2 {
+  margin-bottom: 20px;
+}
+
+.mt-2 {
+  margin-top: 20px;
+}
