--- a/front/src/assets/styles/default.scss
+++ b/front/src/assets/styles/default.scss
@@ -61,6 +61,15 @@ input:focus {
   background-color: var(--2-color120);
 }
 
+.btn:disabled {
+  color: #666;
+  cursor: default;
+}
+
+.btn:disabled:hover {
+  background-color: var(--2-color);
+}
+
 .h-100 {
   height: 100%;
 }
