--- a/front/src/assets/styles/default.scss
+++ b/front/src/assets/styles/default.scss
@@ -15,6 +15,7 @@
   --2-color20: rgba(64, 64, 64, 0.2);
   --3-color: rgba(191, 191, 191, 1);
   --3-color50: rgba(191, 191, 191, 0.5);
+  --4-color: rgb(255, 64, 64);
 }
 
 html, body, #app {
