--- a/front/src/assets/styles/default.scss
+++ b/front/src/assets/styles/default.scss
@@ -36,7 +36,7 @@ html, body, #app {
 
 input {
   width: 100%;
-  margin: 10px 0;
+  margin: 0 0 10px 0;
   padding: 10px;
   border: none;
   background-color: var(--2-color20);
