--- a/front/src/assets/styles/default.scss
+++ b/front/src/assets/styles/default.scss
@@ -7,12 +7,12 @@
 :root {
   --black: #000000;
   --white: #ffffff;
-  --background: #151515;
-  --1-color: #212121;
-  --2-color: rgba(65, 64, 64, 1);
-  --2-color120: rgb(75, 75, 75);
-  --2-color50: rgba(64, 64, 64, 0.5);
-  --2-color20: rgba(64, 64, 64, 0.2);
+  --background: #0e0e0e;
+  --1-color: #1a1a1a;
+  --2-color: rgba(44, 44, 44, 1);
+  --2-color120: rgb(65, 65, 65);
+  --2-color50: rgba(44, 44, 44, 0.5);
+  --2-color20: rgba(44, 44, 44, 0.2);
   --3-color: rgba(191, 191, 191, 1);
   --3-color50: rgba(191, 191, 191, 0.5);
   --4-color: rgb(255, 64, 64);
