--- a/front/src/assets/styles/default.scss
+++ b/front/src/assets/styles/default.scss
@@ -14,6 +14,7 @@
   --2-color50: rgba(44, 44, 44, 0.5);
   --2-color20: rgba(44, 44, 44, 0.2);
   --3-color: rgba(191, 191, 191, 1);
+  --3-color20: rgba(191, 191, 191, 0.2);
   --3-color50: rgba(191, 191, 191, 0.5);
   --4-color: rgb(255, 64, 64);
 }
@@ -23,6 +24,7 @@ html, body, #app {
   justify-content: center; /* Горизонтальное центрирование */
   height: 100%;
   width: 100%;
+  min-width: 960px;
   padding: 0;
   margin: 0;
   background-color: var(--background);
@@ -49,7 +51,9 @@ input {
 input:focus {
   outline: none;
 }
-
+input::placeholder{
+  color: var(--3-color20);
+}
 a {
   text-decoration: none;
 }
@@ -110,6 +114,27 @@ a {
   min-height: 30px;
 }
 
+.p-0 {
+  padding: 0;
+}
+
+.pr-0 {
+  padding-right: 0;
+}
+
+.pl-0 {
+  padding-left: 0;
+}
+
+.pb-0 {
+  padding-bottom: 0;
+}
+
+.pt-0 {
+  padding-top: 0;
+}
+
+
 .p-2 {
   padding: 20px;
 }
@@ -130,6 +155,25 @@ a {
   padding-top: 20px;
 }
 
+.m-0 {
+  margin: 0;
+}
+
+.mr-0 {
+  margin-right: 0;
+}
+
+.ml-0 {
+  margin-left: 0;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
 
 .m-2 {
   margin: 20px;
@@ -150,3 +194,4 @@ a {
 .mt-2 {
   margin-top: 20px;
 }
+
